UPDATE: modifiquei o pipeline para aceitar fhir